--- a/package.json
+++ b/package.json
@@ -18,10 +18,6 @@
   },
   "homepage": "https://github.com/rougerose/ps#readme",
   "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-rename": "^1.2.2",
-    "gulp-uglify": "^2.0.1",
-    "photoswipe": "^4.1.1",
-    "pump": "^1.0.2"
+    "gulp": "^4.0.2"
   }
 }
